# Unagi-project-FFT-Software-for-Itou-Lab.-

./: .gitignore  10k0613T2F.1010  NMR.py  README.md  graphui.ui  mainwindow.py  placeholder_listwidget.py  pyproject.toml  test.py
