[project]
name = "test-system"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "lxml>=6.0.2",
    "matplotlib>=3.10.7",
    "nuitka>=2.8.4",
    "numpy>=2.3.4",
    "openpyxl>=3.1.5",
    "pathlib>=1.0.1",
    "pypdf>=6.1.3",
    "pyqtgraph>=0.13.7",
    "pyside6>=6.10.0",
    "qt-material>=2.17",
]
